# clox-attempt

./: CMakeLists.txt
assets/: class.ayu  closure.ayu  clox_session.rdbg  debug.txt  fibonacci.ayu  methods.ayu  superclasses.ayu
build_scripts/windows/: _variables.ps1  run_project.ps1
src/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  main.cpp  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/tests/: test.c  test.h
