cmake_minimum_required(VERSION 3.22.0)

project(clox)

file(GLOB_RECURSE SRC_FILES 	LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
file(GLOB_RECURSE HEADER_FILES 	LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)

add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})
